<?xml version="1.0" encoding="utf-8"?>
<com.github.robinburgess.cores.ChallengeView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.robinburgess.cores.MainActivity"
    >

  <TextView
      android:id="@+id/word"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:text="Vermelho"
      style="@style/Word"
      />

  <View
      android:id="@+id/colourBottomRight"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginRight="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/word"
      tools:background="@color/colorPrimary"
      />

  <View
      android:id="@+id/colourBottomLeft"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginLeft="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/word"
      tools:background="@color/colorAccent"
      />

  <View
      android:id="@+id/colourTopRight"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginRight="30dp"
      app:layout_constraintBottom_toTopOf="@+id/word"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:background="@color/yellow"
      />

  <View
      android:id="@+id/colourTopLeft"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginLeft="30dp"
      app:layout_constraintBottom_toTopOf="@+id/word"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:background="@color/red"
      />
</com.github.robinburgess.cores.ChallengeView>